@@ -88,6 +88,7 @@ D(OP_ItemLinkClick)
 D(OP_ItemVerifyRequest)
 D(OP_LootItem)
 D(OP_MoveItem)
+D(OP_PetCommands)
 D(OP_RaidInvite)
 D(OP_ReadBook)
 D(OP_Save)
