@@ -62,6 +62,7 @@ D(OP_ItemLinkClick)
 D(OP_LFGuild)
 D(OP_LootItem)
 D(OP_MoveItem)
+D(OP_PetCommands)
 D(OP_ReadBook)
 D(OP_SetServerFilter)
 D(OP_ShopPlayerSell)
